Added submit to go to rolesview.html

--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -16,8 +16,16 @@
         <div class="jumbotron">
             <img src="../static/images/sampleimage.jpg" width="1000"
                  th:src="@{images/sampleimage.jpg}"/>
-            <h1>Hello</h1>
-            <h2>Fellow Spring Framework Gurus!!!</h2>
+            <h1>Hello World!</h1>
+        </div>
+    </div>
+    <div class="container">
+        <div class="jumbotron">
+            <li><a href="rolesview">Get message</a></li>
+            <form action="rolesview">
+            Choice: <input type="text" name="choice" /> 
+            <input type="submit"/>
+    </form>
         </div>
     </div>
     </body>
